# side_by_side_motion_planner

./: README.md  catkin_make_release  readme.md
centerlines/: 7th_floor.map  all_cw_centerline.txt  ccw_centerline.path  ccw_centerline.txt  ccw_centerline_composite.txt  ccw_centerline_composite_for_path.txt  ccw_centerline_output.txt  ccw_centerline_output_output.txt  ccw_distribution.txt  centerline_2_agent_paths.py  cw_centerline.path  cw_centerline.txt  cw_centerline_02.txt  cw_centerline_composite.txt  cw_centerline_composite_for_path.txt  cw_centerline_output.txt  cw_centerline_output_output.txt  cw_centerline_output_output_output.txt  cw_centerline_output_output_output_output.txt  cw_distribution.txt  cw_partial_distribution.txt  format_transformation.py  plot.plt  send_composite_ccw.sh  send_composite_cw.sh  xyResamplingList.txt
environments/velodyne_coi_7th_floor/: 3.pgm  empty.sh  for_text_export.yaml  for_text_export_free.yaml  free.yaml  map.csv  map_obs.txt  multi-layered.xcf  multi-layered.yaml  multi-layered_2.xcf  plot.plt  plot.plt~  send_7th_floor_path.sh  set_start_position.sh  waypoint_send.sh
launch/: 7th_floor.launch  7th_floor.sh  both.launch  both_robot_whill.launch  cmd_mux_config.yaml  extract_new_format.py  footprint.launch  frene.py  junksbs.launch  mod_send_sample_points.py  plot.plt  sbs.launch  send_sample_points.py  single.launch  start_vehicle1.py  start_vehicle2.py  vehicle1.launch  vehicle2.launch
robots/: icartmini_bmi.launch  junkbot.launch  min_bot.launch  senior_car.launch  sensors.launch  test_bot.launch  wc_01.launch  wc_with_velodyne.launch  whill_01.launch  whill_01.launch~
src/amcl/src/: amcl_node.cpp
src/dynamic_object_msgs/: CMakeLists.txt  package.xml
src/dynamic_object_msgs/msg/: DynamicObject.msg  DynamicObjectArray.msg
src/fake_localization/: #fake_localization.cpp#  fake_localization.cpp
src/grid_local_planner/: CMakeLists.txt  bgp_plugin.xml  blp_plugin.xml  package.xml
src/grid_local_planner/include/: global_planner.hpp
src/grid_local_planner/src/: #global_planner.cpp#  astar.hpp  filter.hpp  global_planner.cpp  grid_planner_ros.cpp
src/joystick_teleop/: CMakeLists.txt  package.xml
src/joystick_teleop/androidApp joystick/: joystick.apk
src/joystick_teleop/launch/: android.launch  nav.launch  nav.launch~  wiimote.launch
src/joystick_teleop/src/: ackermann_joystick_teleop_node.cpp  androidBluetoothServer.py  androidIMU.py  button_cmd_mapper.cpp  joystick_teleop_node.cpp
src/laser_preprocess/: CMakeLists.txt  package.xml
src/laser_preprocess/launch/: localization_test_imasen.launch  localization_test_junk.launch  scan_to_pointCloud2.launch
src/laser_preprocess/launch/rviz/: scan_to_pointCloud2.rviz
src/laser_preprocess/src/: cut.cpp  merge_clouds.cpp  pc2_transformer.cpp  periodic_assemble_cloud2s.cpp  periodic_assemble_scans.cpp  uni_density.cpp  uni_density2d.cpp
src/ndt3d/: CMakeLists.txt  package.xml
src/ndt3d/launch/: localization.launch  mapping.launch
src/ndt3d/msg/: NDTResult.msg
src/ndt3d/pts2pcd/: Makefile  main.cpp  pts2pcd
src/ndt3d/src/: algebra.cpp  estimated_pose_logger.cpp  mod_newton.cpp  ndt.h  ndt3d.cpp  ndt3d_with_odom.cpp  newton.cpp  newtonfast.c
src/ndt3d/tools/: Makefile  ndmap_converter_from_pcd.cpp  ndt.h  readme  slam.ndt
src/occmap/: CMakeLists.txt  default.rviz  grid_config.yaml  package.xml
src/occmap/launch/: occgrid.launch  sim.launch  test.launch
src/occmap/src/: occMap_node.cpp
src/pointcloud_tools/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/pointcloud_tools/launch/: passthrough_filtering.launch
src/pointcloud_tools/src/: pc_transformer.cpp  pcd_to_octomap.cpp  plane_model_node.cpp  pointcloud_create_global_map.cpp  pointcloud_create_global_map.cpp~  pointcloud_filter_by_distance.cpp  pointcloud_transform.cpp~  refine_ot.cpp
src/python_whill/: #package.xml#
src/python_whill/src/: WHILL_Command.py  odom_plot.py  (+1 more)
src/rrc_controller/: CMakeLists.txt  package.xml
src/safety_limiter/: CMakeLists.txt  package.xml
src/safety_limiter/launch/: safety_limiter.launch  test.launch  test_for_imasen.launch
src/safety_limiter/msg/: Status.msg
src/safety_limiter/src/: footprint_2_cloud.cpp  footprint_2_cloud.cpp~  safety_limiter.cpp
src/sbs_motion/: CMakeLists.txt  grid_config.yaml  mmm.rviz  package.xml  sbs.rviz
src/simple_simulator/: CMakeLists.txt  package.xml
src/simple_simulator/launch/: ackermann.launch  icartmini.launch  panasonic_robotic_bed.launch  simulator_wc.launch
src/simple_simulator/msg/: AckermannDrive.msg
src/simple_simulator/src/: ackermann_simulator.cpp  odo_simulator.cpp  utm_simulator.cpp
src/simulator/: CMakeLists.txt  package.xml
src/trajectory_tracker/: CMakeLists.txt  CMakeLists.txt~  README.md  first_floor_straight.path  package.xml
src/trajectory_tracker/launch/: ackermann.launch  plan_tracking.launch
src/trajectory_tracker/msg/: TrajectoryPath.msg
src/trajectory_tracker/src/: ackermann_trajectory_tracker.cpp  fb_ackermann_trajectory_tracker.cpp  file_to_path.cpp  mod.cpp  no_velocity_trajectory_tracker.cpp  original_trajectory_tracker.cpp  path_with_time.cpp  trajectory_recorder.cpp  trajectory_saver.cpp  trajectory_server.cpp  trajectory_tracker.cpp  w_ackermann_trajectory_tracker.cpp
src/udp/: CMakeLists.txt  package.xml
src/unit_converter/: CMakeLists.txt  package.xml
src/ypspur_ros_bridge/: CMakeLists.txt  package.xml
src/ypspur_ros_bridge/config/: base_local_planner_params.yaml  cmd_mux_config.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml  shadow_filter.yaml  v1_cmd_mux_config.yaml
src/ypspur_ros_bridge/launch/: 4.1_matsu.launch  acky.launch  drive_Vader.launch  icartmini1.launch  icartmini2.launch  icartmini_bmi.launch  navigate.launch  navigate_Velodyne_octomapping.launch  navigate_Velodyne_point_cloud_fusion.launch  rtabmap.launch  test.launch  wheelchair.launch
src/ypspur_ros_bridge/launch/rviz/: mapping_visu.rviz  nav3_visu.rviz  nav_visu.rviz  navigate_Velodyne_point_cloud_fusion.rviz
src/ypspur_ros_bridge/src/: RosYPSpur.cpp
(+75 files in other folders)
