<?xml version="1.0"?>
<package>
  <name>safety_limiter</name>
  <version>0.1.0</version>
  <description>Velocity and angular velocity limiter</description>

  <maintainer email="atsushi.w@atr.jp">Atsushi Watanabe</maintainer>
  <license>ATR, IRC</license>
  <author email="atsushi.w@atr.jp">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_preprocess</run_depend>
</package>
