<?xml version="1.0"?>
<package>
  <name>simple_simulator</name>
  <version>0.1.0</version>
  <description>A package containing a node providing fake odometry and a node simulating a UTM sensor using a map from map_server</description>

  <maintainer email="florent@atr.jp">Florent</maintainer>
  <license>ATR, IRC</license>
  <author email="florent@atr.jp">Florent</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>fake_localization</run_depend>
  
</package>
